blog/x-ray/x-ray.css
/* ... */
aside#mobile_menu .side_wrap {
  height: 100%;
}

main, #banner, #footer {
  border-left: var(--border);
}

nav, .search input, .search select, .search textarea {
  background: var(--transparentHighlight);
}

/*SIDEBAR*/
nav {
  position: fixed;
  left: 0;
  width: var(--barWidth);
  height: calc(100% - var(--asideBottom));
  padding: 0px 0px;
}

.side_wrap {
  padding: 65px 50px 0 50px;
}

nav ul {
  position: absolute;
  bottom: 0px;
  left: var(--barWidth);
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  transform-origin: bottom left;
  height: var(--barWidth);
  width: calc(100vh - var(--asideBottom));
  display: flex;
  justify-content: space-between;
  list-style-type: none;
  padding-left: 25px;
}

nav li a, nav li, nav li:last-child i {
  display: flex !important;
  align-items: center;
  height: 100%;
  font-weight: 400;
  color: var(--barText);
  text-transform: lowercase;
  font-size: 12px;
}

nav li .copy_date {
    font-size: 12px;
    margin-left: 10px;
    letter-spacing: 3px;
}


nav li.main_title a {
  font-size: 14px;
  letter-spacing: 3px;
  /*background: var(--accent);
  color: var(--accentText);*/
  text-transform: uppercase;
}

nav li a {
  padding: 0 25px;
}

nav li i {
  justify-content: center;
  color: var(--accentstaticWhite);
}

aside#mobile_menu a {
  color: var(--textColor);
}

aside#mobile_menu ul {
  list-style-type: none;
  margin: 25px;
}

aside#mobile_menu ul li {
  margin: 5px 0;
}

aside#mobile_menu ul li a {
  font-family: var(--googleFontSecondary);
}

.side_wrap {
  display: flex;
  flex-direction: column;
}

/*boxes*/
.side_box {
   margin-bottom: 25px;
}

#about_img_sub {
  display: flex;
}

.about_img_sub {
  margin-bottom: 25px;
}

.about_img_sub img {
  width: 50px;
  height: 50px;
  margin-right: 25px;
}

.about_img_sub h3 {
  color: var(--textColor);
  align-self: center;
  font-size: var(--headlineSize);
}

#link_box {
  margin-bottom: 50px;
  overflow-y: auto;
}

#link_box ul {
  margin: 0;
}

#link_box li {
  font-size: var(--textSize);
  padding: 0 0 15px 0;
  letter-spacing: 3px;
  text-transform: uppercase;
}

#social {
  margin-bottom: 50px;
}

#social ul {
  display: flex;
  margin: 0;
}

#social li {
  margin: 0;
  margin-right: 15px;
  display: flex;
  font-size: var(--headlineSize);
}

/*search*/
.search {
  width: calc(var(--asideWidth) + var(--barWidth));
  display: flex;
  flex-direction: row;
}

#search_bar {
  position: fixed;
  left: 0;
  bottom: 0;
  border-top: var(--border);
}

.search form {
  flex: 1;
}

.search input, .search select, .search textarea {
  height: 50px;
  width: 100%;
  border: 0;
  padding: 20px;
  font-size: var(--textSize);
  color: var(--barText);
}

.search input:focus {
  border: 0;
  box-shadow: none;
  outline: 0;
}

.search .fa-search {
  height: 50px;
  width: 50px;
  color: var(--accentText);
  background: var(--accent);
  font-size: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#search_bar .fa-search {
  border-right: var(--border);
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  font-family: var(--googleFont);
}
::-moz-placeholder { /* Firefox 19+ */
  font-family: var(--googleFont);
}
:-ms-input-placeholder { /* IE 10+ */
  font-family: var(--googleFont);
}
:-moz-placeholder { /* Firefox 18- */
  font-family: var(--googleFont);
}

/*POSTS*/
.article_wrapper {
  padding: 50px 50px;
}

article {
  max-width: calc(var(--postWidth) + 350px);
}

.post {
  display: flex;
  flex-direction: row;
  position: relative;
  height: auto;
  margin: auto;
}

.post_header {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  margin-bottom: 25px;
}

.pinfo > img {
  width: 50px;
}

.post_body {
  max-width: var(--postWidth);
  flex: 1;
  padding-right: 50px;
}

.cpt {
  max-width: var(--postWidth);
}

.post_footer {
  display: flex;
  flex-direction: column;
  width: 250px;
  border-left: var(--border);
  padding-left: 50px;
}

.post_title {
  width: 100%;
}

.post_title h1 {
  line-height: 150%;
  color: var(--accentText);
  padding: 0;
  font-size: var(--headlineSize);
}

.post_title h1 span {
  background: var(--accent);
  padding: 10px 10px;
}

/*CAPTIONS & UNNEST*/
.caption {
  margin-top: 0px;
  line-height: 150%;
  text-align: justify;
  font-size: var(--textSize);
  font-weight: 400;
  color: var(--textColor);
}

.reblog_body, .caption {
  padding: 15px 0 25px;
}

.caption h2 {
  margin-bottom: 10px;
  width: 100%;
  text-align: left;
  font-size: calc(var(--textSize) + 0.5em);
}

.caption p a,
.caption ul a,
.caption a,
.pl a,
.plnotes ol li a,
.like_button.liked + span,
.custom_like_button:hover {
  padding: 0 0px;
  box-shadow: inset 0 -50px var(--accent);
  color: var(--accentText);
  font-weight: 500;
  text-decoration: underline;
}

.caption a:hover,
.caption ul a:hover,
.caption p a:hover,
.pl a:hover {
  box-shadow: none;
  color: var(--textColor);
}

.caption a b {
  color: var(--accentText);
}

.caption a b:hover {
  color: var(--textColor);
}

.caption p {}

.caption *, #description p {
  margin: 15px 0;
  word-break: break-word;
}

.caption code * {
  margin: 0px 0 !important;
}

.caption p:empty, #desc p:empty {
  margin: 0;
}

.caption p:only-child {
  margin: 0;
}

.caption :first-child {
  margin-top: 0;
}

.caption :last-child, #desc :last-child {
  margin-bottom: 0;
}

.caption > :only-child {
  margin: 0 auto;
}

.caption :first-child:not(:empty) {
  margin-top: 0;
}

.caption blockquote p {
  margin: 0 auto;
}

.caption img {
  width: 100%;
  height: auto;
}

.reblog_parent {
  padding: 0px 0px 0px 0px;
  margin: 0px 0px;
}

.reblog_parent:first-child {
  margin-top: 0;
}

.reblog_parent:last-child {
  margin-bottom: 0;
}

.reblog_header,
.asker,
.answerer {
  display: flex;
  align-items: center;
  text-transform: lowercase;
  margin-top: 15px;
  font-weight: bold;
  font-size: calc(var(--textSize) + 2px);
}
/* ... */

